--- a/queue.yaml
+++ b/queue.yaml
@@ -11,5 +11,5 @@ spec:
     spec:
       containers:
       - name: queue
-        image: hub.platformservices.io/techevo/queue:ibbo
+        image: queue:ibbo
 
